# doggy-meetup

./: .gitignore  README.md
apps/: .env.example  App.tsx  app.json  eas.json  package.json  tsconfig.json
apps/src/: config.ts
apps/src/components/: DogCard.tsx
apps/src/screens/auth/: LoginScreen.tsx  RegisterScreen.tsx
apps/src/screens/dogs/: DogDetailScreen.tsx  DogFormScreen.tsx  MyDogsScreen.tsx
apps/src/services/: api.ts  auth.ts  dogs.ts  storage.ts
apps/src/stores/: authStore.ts  dogStore.ts
apps/src/types/: common.ts  dog.ts  user.ts
docs/: framework.md
docs/designs/: 2025-01-28-doggy-meetup-design.md
docs/plans/: 2025-01-28-01-project-init-progress.md  2025-01-28-01-project-init.md  2025-01-28-02-auth-and-dogs-progress.md  2025-01-28-02-auth-and-dogs.md  2025-01-28-03-session-core.md  2025-01-28-04-chat-groups.md  2025-01-28-05-mbti-test.md  2025-01-28-06-polish.md
scripts/: README.md  migration.sh  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh
server/: .env.example  .gitignore  alembic.ini  pyproject.toml
server/alembic/: env.py
server/app/: database.py  main.py
server/app/api/: deps.py
server/app/api/v1/: __init__.py  auth.py  dogs.py
server/app/core/: config.py  security.py
server/app/models/: __init__.py  chat.py  dog.py  location.py  post.py  session.py  user.py
server/app/schemas/: auth.py  dog.py  user.py
server/app/services/: auth_service.py  dog_service.py
