[tool.poetry]
name = "doggy-meetup-server"
version = "1.0.0"
description = "Doggy Meetup Backend API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
redis = "^5.2.0"
celery = "^5.4.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
websockets = "^13.1"
geopy = "^2.4.1"
boto3 = "^1.35.50"
firebase-admin = "^6.5.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
ruff = "^0.7.1"
mypy = "^1.12.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
